# osx_fab_src

./: Makefile  README.md  commands.html
src/: CMakeLists.txt
src/apps/: README  bundle.py  cba.icns
src/core/: CMakeLists.txt  array_direction.c  array_distances.c  array_edges.c  array_info.c  array_offset.c  array_png.c  array_slice.c  array_states_png.c  fab.c  fab.h  gif_png.c  gif_stl.c  path_array.c  path_camm.c  path_dxf.c  path_epi.c  path_eps.c  path_g.c  path_info.c  path_join.c  path_oms.c  path_ord.c  path_png.c  path_rml.c  path_sbp.c  path_time.c  path_uni.c  png_distances.c  png_drl.c  png_ex.c  png_grb.c  png_halftone.c  png_offset.c  png_path.c  png_scale.c  png_size.c  stl_info.c  stl_path.c  stl_png.c  (+3 more)
src/guis/: CMakeLists.txt  cad_ui  fab  fab.html  fabserver  make_cad_camm  make_cad_drl  make_cad_dxf  make_cad_epi  make_cad_eps  make_cad_g  make_cad_grb  make_cad_ord  make_cad_png  make_cad_rml  make_cad_sbp  make_cad_snap  make_cad_stl  make_cad_uni  make_math_camm  make_math_drl  make_math_dxf  make_math_epi  make_math_eps  make_math_g  make_math_grb  make_math_ord  make_math_rml  make_math_sbp  make_math_stl  make_math_uni  make_png_camm  make_png_drl  make_png_dxf  make_png_epi  make_png_epi_halftone  make_png_eps  make_png_eps_halftone  make_png_g  make_png_grb  (+24 more)
src/py/: CMakeLists.txt  cad_shapes.py  cad_text.py  fab_mods.py  fab_set.py  math_string.py  panel_cad.py  panel_cad_png.py  panel_cad_stl.py  panel_control.py  panel_math.py  panel_math_png.py  panel_math_stl.py  panel_path.py  panel_path_camm.py  panel_path_dxf.py  panel_path_epi.py  panel_path_eps.py  panel_path_g.py  panel_path_oms.py  panel_path_ord.py  panel_path_plt.py  panel_path_rml.py  panel_path_sbp.py  panel_path_snap.py  panel_path_snap_apa.py  panel_path_uni.py  panel_png.py  panel_png_drl.py  panel_png_grb.py  panel_png_path.py  panel_png_path_halftone.py  panel_png_png.py  panel_stl.py  panel_stl_png.py  panel_svg.py  panel_svg_path.py  png_l.py
src/scripts/: CMakeLists.txt  cad_math  cad_path  cad_png  cad_view  eagle_png  fab_send  fab_update  math_png_py  math_stl_py  path_view  png_tile  rml_move
src/solver/: CMakeLists.txt  Makefile  color_nodes.cpp  color_nodes.hpp  edgesolver.cpp  edgesolver.hpp  fab_interval.hpp  fabvars.cpp  fabvars.hpp  geometry.cpp  geometry.hpp  imagesolver.cpp  imagesolver.hpp  logic_nodes.cpp  logic_nodes.hpp  math_dot.cpp  math_png.cpp  math_ray.cpp  math_stats.cpp  math_stl.cpp  math_svg.cpp  math_tree.cpp  math_tree.hpp  node.cpp  node.hpp  node_macro.hpp  numeric_nodes.cpp  numeric_nodes.hpp  opcodes.cpp  opcodes.hpp  parser.cpp  parser.hpp  progress_bar.cpp  progress_bar.hpp  raycaster.cpp  raycaster.hpp  region.cpp  region.hpp  solver.cpp  solver.hpp  (+11 more)
